<LinearLayout android:id="@+id/activity_share_recorder_root"
              xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:background="#fff"
              android:orientation="vertical"
              android:weightSum="10.5"
              tools:context=".PassSettingActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:orientation="vertical"
        android:weightSum="10">

        <TextView
            android:id="@+id/text_main_pass"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="6"
            android:gravity="center"
            android:text="@string/passcode_confirm"
            android:textColor="@color/black"
            android:textSize="@dimen/text_size_large"
            android:textStyle="normal"/>

        <TextView
            android:id="@+id/text_sub_pass"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="4"
            android:gravity="top|center_horizontal"
            android:text="@string/passcode_input"
            android:textColor="@color/black"
            android:textSize="@dimen/text_size_small"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/view_pass_leniar"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:gravity="center"
        android:orientation="horizontal">

        <View
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"/>

        <ImageView
            android:id="@+id/circle1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="5dp"
            android:layout_weight="1"
            android:contentDescription="@string/image_error"
            android:src="@null"/>

        <ImageView
            android:id="@+id/circle2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:layout_weight="1"
            android:contentDescription="@string/image_error"
            android:src="@null"/>

        <ImageView
            android:id="@+id/circle3"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:layout_weight="1"
            android:contentDescription="@string/image_error"
            android:src="@null"/>

        <ImageView
            android:id="@+id/circle4"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="20dp"
            android:layout_weight="1"
            android:contentDescription="@string/image_error"
            android:src="@null"/>

        <View
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginLeft="25dp"
        android:layout_marginRight="25dp"
        android:layout_weight="0.5"
        android:orientation="vertical">

        <View
            android:layout_width="wrap_content"
            android:layout_height="1dp"
            android:background="@color/black"/>

        <View
            android:layout_width="wrap_content"
            android:layout_height="1dp"
            android:layout_marginTop="5dp"
            android:background="@color/black"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="6"
        android:gravity="bottom"
        android:orientation="vertical"
        android:padding="30dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dip"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/box1"
                android:layout_width="0dip"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/bg_btn_number"
                android:clickable="true"
                android:gravity="center"
                android:text="@string/one"
                android:textColor="@color/black"
                android:textColorHint="@android:color/black"
                android:textSize="36sp"
                android:textStyle="bold"/>

            <TextView
                android:id="@+id/box2"
                android:layout_width="0dip"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/bg_btn_number"
                android:clickable="true"
                android:gravity="center"
                android:text="@string/two"
                android:textColor="@color/black"
                android:textSize="36sp"
                android:textStyle="bold"/>

            <TextView
                android:id="@+id/box3"
                android:layout_width="0dip"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/bg_btn_number"
                android:clickable="true"
                android:gravity="center"
                android:text="@string/three"
                android:textColor="@color/black"
                android:textSize="36sp"
                android:textStyle="bold"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dip"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/box4"
                android:layout_width="0dip"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/bg_btn_number"
                android:clickable="true"
                android:gravity="center"
                android:text="@string/four"
                android:textColor="@color/black"
                android:textSize="36sp"
                android:textStyle="bold"/>

            <TextView
                android:id="@+id/box5"
                android:layout_width="0dip"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/bg_btn_number"
                android:clickable="true"
                android:gravity="center"
                android:text="@string/five"
                android:textColor="@color/black"
                android:textSize="36sp"
                android:textStyle="bold"/>

            <TextView
                android:id="@+id/box6"
                android:layout_width="0dip"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/bg_btn_number"
                android:clickable="true"
                android:gravity="center"
                android:text="@string/six"
                android:textColor="@color/black"
                android:textSize="36sp"
                android:textStyle="bold"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dip"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/box7"
                android:layout_width="0dip"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/bg_btn_number"
                android:clickable="true"
                android:gravity="center"
                android:text="@string/seven"
                android:textColor="@color/black"
                android:textSize="36sp"
                android:textStyle="bold"/>

            <TextView
                android:id="@+id/box8"
                android:layout_width="0dip"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/bg_btn_number"
                android:clickable="true"
                android:gravity="center"
                android:text="@string/eight"
                android:textColor="@color/black"
                android:textSize="36sp"
                android:textStyle="bold"/>

            <TextView
                android:id="@+id/box9"
                android:layout_width="0dip"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/bg_btn_number"
                android:clickable="true"
                android:gravity="center"
                android:text="@string/nine"
                android:textColor="@color/black"
                android:textSize="36sp"
                android:textStyle="bold"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dip"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/box_cancel"
                android:layout_width="0dip"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/bg_btn_number"
                android:clickable="true"
                android:onClick="onCancel"
                android:gravity="center"
                android:visibility="invisible"
                android:text="@string/cancel"
                android:textColor="@color/black"
                android:textSize="@dimen/text_size_pre_medium"
                android:textStyle="bold"/>

            <TextView
                android:id="@+id/box0"
                android:layout_width="0dip"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/bg_btn_number"
                android:clickable="true"
                android:gravity="center"
                android:text="@string/zero"
                android:textColor="@color/black"
                android:textSize="36sp"
                android:textStyle="bold"/>

            <RelativeLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1">

                <ImageView
                    android:id="@+id/box_delete"
                    android:layout_width="40dip"
                    android:layout_height="40dip"
                    android:layout_centerInParent="true"
                    android:onClick="onDelete"
                    android:background="@drawable/button_passdelete"
                    android:clickable="true"
                    android:textColor="@color/black"/>
            </RelativeLayout>
        </LinearLayout>
    </LinearLayout>

</LinearLayout>